k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-deployment-postgres
  namespace: gio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gio-postgres
  template:
    metadata:
      labels:
        app: gio-postgres
    spec:

      # --- Init container para preparar el directorio de datos ---
      containers:
      - name: gio-postgres
        image: postgres:15
        ports:
        - containerPort: 5432

        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: gio-postgres-storage

      volumes:
      - name: gio-postgres-storage
        persistentVolumeClaim:
          claimName: gio-pvc-postgres

---

apiVersion: v1
kind: Service
metadata:
  name: gio-svc-postgres
  namespace: gio
spec:
  selector:
    app: gio-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
