k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-deployment-redis
  namespace: gio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gio-redis
  template:
    metadata:
      labels:
        app: gio-redis
    spec:
      containers:
      - name: gio-redis
        image: redis:7
        args: ["redis-server", "--appendonly", "yes"]
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: gio-svc-redis
  namespace: gio
spec:
  selector:
    app: gio-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
