k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-deployment-result
  namespace: gio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gio-result
  template:
    metadata:
      labels:
        app: gio-result
    spec:
      containers:
      - name: gio-result
        image: josueegm/result:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gio-svc-result
  namespace: gio
spec:
  selector:
    app: gio-result
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
