k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gio-deployment-worker
  namespace: gio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gio-worker
  template:
    metadata:
      labels:
        app: gio-worker
    spec:
      containers:
      - name: gio-worker
        image: josueegm/worker:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: gio-svc-worker
  namespace: gio
spec:
  selector:
    app: gio-worker
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
